--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,8 @@
   <header>
     <title>Sayeed Zamee's Resume</title>
 <link rel="stylesheet" href="css/master.css">
-<link rel="FaviconIcon" heref="Favicon/favicon.ico" type="image/x-icon">
-<link rel="shortcut" heref="Favicon/favicon.ico" type="image/x-icon">
+<link rel="FaviconIcon" heref="favicon.ico" type="image/x-icon">
+<link rel="shortcut" heref="favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="name" content="Sayeed Zamee">
 <meta name="robots" content="noindex, nofollow">
