--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <h2>Credentials and Portfolio</h2>
 
-    <p><a href="resume.html">My Resume</a> | <a href="https://github.com/Sayeed-Zamee">My GitHub</a> </p>
+    <p><a href="resume.html">My Resume</a> | <a href="https://github.com/sayeedzamee">My GitHub</a> </p>
 
 
     <h2>Contact</h2>
