--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
 
     <h2>Portfolio</h2>
-      <h3>GitHub: <a href="https://github.com/Sayeed-Zamee"" target="_blank">https://github.com/Sayeed-Zamee</a></h3>
+      <h3>GitHub: <a href="https://github.com/sayeedzamee"" target="_blank">https://github.com/Sayeed-Zamee</a></h3>
 
     <h2>Education</h2>
 
