--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </header>
 
   <body>
-<img src="Images/Zam.jpg" width="75%" alt="Zamee">
+<img src="Images/Zam.jpg" width="60%" alt="Zamee">
     <h1>Sayeed Zamee</h1>
     <h2>About Me</h2>
-    <p>I am an asipring machine learning and artificial intelligence engineer</p>
-    <p>I am currently in my senior year at the Islamic University of Technology majoring in Electrical and Electronic Engineering (EEE).</p>
-    <p>I am acitively looking for internships and job opening as an AI engineer or Data Analyst.</p>
+    <p>I am a senior year undergraduate student at Islamic University of Technology majoring in Electrical and Electronic Engineering (EEE) </p>
+    <p>Apart from engineering, I find joy in public speaking and commuicating with new individuals. The world is full of individuals with unique stories and beig able to connect with them gives me a personal joy</p>
+    <p>I am acitively looking for internships and job opening.</p>
 
     <h2>Credentials and Portfolio</h2>
 
