--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2>About Me</h2>
     <p>I am a senior year undergraduate student at Islamic University of Technology majoring in Electrical and Electronic Engineering (EEE) </p>
     <p>Apart from engineering, I find joy in public speaking and commuicating with new individuals. The world is full of individuals with unique stories and beig able to connect with them gives me a personal joy</p>
-    <p>I am acitively looking for internships and job opening.</p>
+    <p>I am acitively looking for internships and job openings.</p>
 
     <h2>Credentials and Portfolio</h2>
 
