--- a/resume.html
+++ b/resume.html
@@ -49,22 +49,39 @@
         <h3>Sparks Campus Ambassador</h3>
         <h4>Unilever Bangladesh Limited</h4>
         <h5>April 2019-April 2020</h5>
+              <ul>
+        <li>Act as a liasion between UBL and IUT</li>
+        <li>Promote campus activities and events of UBL</li>
+              </ul>
 
         <h3>Content Writer </h3>
         <h4>FRAKTAL Creative</h4>
         <h5>Feb 2020-May 2020</h5>
+                 <ul>
+        <li>Create SEO content on a range of topics</li>
+              </ul>
 
         <h3>Chief Communication Officer</h3>
         <h4>Nerd Community</h4>
         <h5>Sep 2016-Jan 2019</h5>
+                <ul>
+        <li>Spearheaded the social media and communications team</li>
+        <li>Oversaw the recruitment and evaluation of interns and team members</li>
+              </ul>
 
         <h3>Lab Instructor </h3>
         <h4>Maple Leaf International School</h4>
         <h5>Sep 2016-Jan 2017</h5>
+               <ul>
+        <li>Part of a group of teachers to guide A levels students during laboratory classes</li>
+              </ul>
 
         <h3>Physics Instructor </h3>
         <h4>Paper Heights</h4>
         <h5>Jan 2019-Jan 2020</h5>
+               <ul>
+        <li>Taught O and A level students</li>
+              </ul>
 
 
 
