--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,5 @@
 <!doctype html>
 
-<!-- this is a comment for human! -->
 
 <html lang="en">
 
@@ -23,10 +22,9 @@
     <h4>Final year undergraduate student</h4>
 
     <p>Email: <a href="mailto:sayeed.zamee@gmail.com" target="_blank">sayeed.zamee@gmail.com</a></p>
-    <!-- don't post physical address, personal phone number or other personal information on the web! -->
 
     <h2>Portfolio</h2>
-      <h3>GitHub: <a href="https://github.com/sayeedzamee"" target="_blank">https://github.com/Sayeed-Zamee</a></h3>
+      <h3>GitHub: <a href="https://github.com/sayeedzamee"" target="_blank">https://github.com/sayeedzamee</a></h3>
 
     <h2>Education</h2>
 
@@ -102,7 +100,6 @@
         <h3>Sub Coordinator</h3>
         <h4>MLIS The Student Council</h4>
         <h5>Jan 2015-Aug 2016</h5
-
 
 
             </body>
