--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Sayeed Zamee</h1>
     <h2>About Me</h2>
     <p>I am a senior year undergraduate student at Islamic University of Technology majoring in Electrical and Electronic Engineering (EEE) </p>
-    <p>Apart from engineering, I find joy in public speaking and commuicating with new individuals. The world is full of individuals with unique stories and beig able to connect with them gives me a personal joy</p>
+    <p>Proficent at pulic speaking and communication, dedicated and a team player. Able to work under presssure and determined to fulfilling commitments.</p>
     <p>I am acitively looking for internships and job openings.</p>
 
     <h2>Credentials and Portfolio</h2>
